# cpp-serve

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  cpp-serve.hpp
examples/: hello-world.cpp
examples/login-system/: main.cpp
examples/login-system/static/: index.html  style.css
examples/login-system/static/protected/: index.html
include/: constants.hpp  cookie.hpp  http.hpp  request.hpp  response.hpp  util.hpp
src/: constants.cpp  cookie.cpp  http.cpp  request.cpp  response.cpp  util.cpp
